--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -11,13 +11,17 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        # run on the following versions of node:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+        node-version: [18.x, 20.x, 22.x]
+        # run on the following operating systems:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    
+    runs-on: ${{ matrix.os }}
+    
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
